--- a/css/sass/_colors.scss
+++ b/css/sass/_colors.scss
@@ -2,4 +2,4 @@ $primary: #732EB8;
 $neutral-white: #F1F1F1;
 $neutral-black: #17141F;
 
-$horizontal-gradient: linear-gradient(90deg, #732EB8 0%, rgba(115, 46, 184, 0) 100%);
+$horizontal-gradient: linear-gradient(90deg, $primary 0%, transparentize($color: $primary, $amount: 1) 100%);
