--- a/css/sass/_typography.scss
+++ b/css/sass/_typography.scss
@@ -7,7 +7,7 @@ $x-bold: 800;
 
 $regular: 400;
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, a, p {
     color: $neutral-white;
     text-align: center;
 }
@@ -36,7 +36,8 @@ h5 {
     font-weight: $s-bold;
 }
 
-h6 {
+a {
+    text-decoration: none;
     font-size: 1.25rem;
     font-family: 'Poppins', sans-serif;
     font-weight: $medium;
@@ -53,6 +54,7 @@ p {
     font-family: 'Poppins', sans-serif;
     font-weight: $x-bold;
     text-align: unset;
+    pointer-events: none;
 }
 
 .soon {
